fix: overflow-y hidden, reposition image on hover

--- a/app/components/ExhibitionsList/ExhibitionsList.module.css
+++ b/app/components/ExhibitionsList/ExhibitionsList.module.css
@@ -53,7 +53,7 @@
 	--size: 20vw;
 	width: var(--size);
 	height: var(--size);
-	top: -1%;
+	top: -10vw;
 	left: 5rem;
 	position: fixed;
 	z-index: 10;
